--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,3 +1,3 @@
-@import './utils/common';
 @import './utils/breakpoints';
-@import './example';
+@import './base/common';
+@import './components/example';
