--- a/src/sass/utils/_mixin.scss
+++ b/src/sass/utils/_mixin.scss
@@ -1,8 +1,4 @@
 @mixin mq($val) {
-  $mobile: 320px;
-  $tablet: 768px;
-  $desctop: 1200px;
-
   @if $val==mob {
     @media (min-width: $mobile) {
       @content;
@@ -16,15 +12,15 @@
       @content;
     }
   } @else if $val==tab-only {
-    @media (min-width:$tablet) and (max-width:#{$desctop - 0.02}) {
+    @media (min-width:$tablet) and (max-width:#{$desktop - 0.02}) {
       @content;
     }
   } @else if $val==desc {
-    @media (min-width: $desctop) {
+    @media (min-width: $desktop) {
       @content;
     }
   } @else if $val==noDesc {
-    @media (max-width:#{$desctop - 0.02}) {
+    @media (max-width:#{$desktop - 0.02}) {
       @content;
     }
   } @else if $val==retina {
