--- a/src/partials/07-reviews.html
+++ b/src/partials/07-reviews.html
@@ -1,4 +1,4 @@
-<section class="review">
+<section class="review container">
   <img
     src="./images/07-reviews/customer1-1x.png"
     width="85"
