--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,3 +1,4 @@
+@import '~node_modules/modern-normalize/modern-normalize.css';
 @import './utils/breakpoints';
 @import './utils/mixin';
 @import './utils/variables';
