--- a/src/partials/03-products.html
+++ b/src/partials/03-products.html
@@ -19,6 +19,7 @@
             "
             src="./images/03-products/arrow-right.png"
             alt="Подробнее"
+            loading="lazy"
           />
         </button>
       </li>
@@ -36,6 +37,7 @@
             "
             src="./images/03-products/arrow-right.png"
             alt="Подробнее"
+            loading="lazy"
           />
         </button>
       </li>
@@ -53,6 +55,7 @@
             "
             src="./images/03-products/arrow-right.png"
             alt="Подробнее"
+            loading="lazy"
           />
         </button>
       </li>
