--- a/src/partials/07-reviews.html
+++ b/src/partials/07-reviews.html
@@ -1,71 +1,78 @@
 <section class="container">
-  <div class="review">
-    <img
-      srcset="
-        ./images/07-reviews/customer1-1x.png 1x,
-        ./images/07-reviews/customer1-2x.png 2x
-      "
-      src="./images/07-reviews/customer1-1x.png"
-      width="85"
-      height="85"
-      loading="lazy"
-      alt="customer1"
-    />
-    <div class="review__outer-container">
-      <div class="review__inner-container">
-        <p class="review__customer-text">
-          Nullam viverra consectetuer. Quisque cursus et, porttitor risus.
-          Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem
-          ipsum primis in nibh vel risus.
-        </p>
+  <div class="swiper">
+    <div class="swiper-wrapper">
+      <div class="review swiper-slide">
+        <img
+          srcset="
+            ./images/07-reviews/customer1-1x.png 1x,
+            ./images/07-reviews/customer1-2x.png 2x
+          "
+          src="./images/07-reviews/customer1-1x.png"
+          width="85"
+          height="85"
+          loading="lazy"
+          alt="customer1"
+        />
+        <div class="review__outer-container">
+          <div class="review__inner-container">
+            <p class="review__customer-text">
+              Nullam viverra consectetuer. Quisque cursus et, porttitor risus.
+              Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem
+              ipsum primis in nibh vel risus.
+            </p>
+          </div>
+        </div>
+        <p class="review__customer-info">Emily, Los Angeles</p>
+      </div>
+      <div class="review swiper-slide">
+        <img
+          srcset="
+            ./images/07-reviews/customer2-1x.png 1x,
+            ./images/07-reviews/customer2-2x.png 2x
+          "
+          src="./images/07-reviews/customer2-1x.png"
+          width="85"
+          height="85"
+          loading="lazy"
+          alt="customer1"
+        />
+        <div class="review__outer-container">
+          <div class="review__inner-container">
+            <p class="review__customer-text">
+              Nullam viverra consectetuer. Quisque cursus et, porttitor risus.
+              Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem
+              ipsum primis in nibh vel risus.
+            </p>
+          </div>
+        </div>
+        <p class="review__customer-info">Emily, Los Angeles</p>
+      </div>
+      <div class="review swiper-slide">
+        <img
+          srcset="
+            ./images/07-reviews/customer3-1x.png 1x,
+            ./images/07-reviews/customer3-2x.png 2x
+          "
+          src="./images/07-reviews/customer3-1x.png"
+          width="85"
+          height="85"
+          loading="lazy"
+          alt="customer1"
+        />
+        <div class="review__outer-container">
+          <div class="review__inner-container">
+            <p class="review__customer-text">
+              Nullam viverra consectetuer. Quisque cursus et, porttitor risus.
+              Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem
+              ipsum primis in nibh vel risus.
+            </p>
+          </div>
+        </div>
+        <p class="review__customer-info">Emily, Los Angeles</p>
       </div>
     </div>
-    <p class="review__customer-info">Emily, Los Angeles</p>
-  </div>
-  <div class="review undisplayed">
-    <img
-      srcset="
-        ./images/07-reviews/customer2-1x.png 1x,
-        ./images/07-reviews/customer2-2x.png 2x
-      "
-      src="./images/07-reviews/customer2-1x.png"
-      width="85"
-      height="85"
-      loading="lazy"
-      alt="customer1"
-    />
-    <div class="review__outer-container">
-      <div class="review__inner-container">
-        <p class="review__customer-text">
-          Nullam viverra consectetuer. Quisque cursus et, porttitor risus.
-          Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem
-          ipsum primis in nibh vel risus.
-        </p>
-      </div>
-    </div>
-    <p class="review__customer-info">Emily, Los Angeles</p>
-  </div>
-  <div class="review undisplayed">
-    <img
-      srcset="
-        ./images/07-reviews/customer3-1x.png 1x,
-        ./images/07-reviews/customer3-2x.png 2x
-      "
-      src="./images/07-reviews/customer3-1x.png"
-      width="85"
-      height="85"
-      loading="lazy"
-      alt="customer1"
-    />
-    <div class="review__outer-container">
-      <div class="review__inner-container">
-        <p class="review__customer-text">
-          Nullam viverra consectetuer. Quisque cursus et, porttitor risus.
-          Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem
-          ipsum primis in nibh vel risus.
-        </p>
-      </div>
-    </div>
-    <p class="review__customer-info">Emily, Los Angeles</p>
+    <div class="swiper-pagination"></div>
+    <!-- <div class="swiper-button-prev"></div>
+    <div class="swiper-button-next"></div> -->
   </div>
 </section>
