--- a/src/sass/components/_07-customers.scss
+++ b/src/sass/components/_07-customers.scss
@@ -97,6 +97,8 @@
 
 .review__customer-info{
     position: relative;
+
+    margin-bottom: 30px;
     margin-top: 36px;
     font-weight: 500;
     font-size: 14px;
@@ -136,4 +138,23 @@
     border-radius: 50%;
 
     background-color: #d9d9d9;
+}
+
+//////Swiper
+
+.swiper-pagination-bullet-active{
+    width: 12px;
+    height: 12px;
+    border-radius: 0;
+    background-color: transparent;
+    background-image: url(../images/07-reviews/home.svg);
+}
+
+.swiper-pagination-bullet{
+    width: 12px;
+    height: 12px;
+}
+
+.swiper-horizontal>.swiper-pagination-bullets .swiper-pagination-bullet{
+    margin: 0 9px;
 }
