--- a/src/partials/09-footer.html
+++ b/src/partials/09-footer.html
@@ -1,8 +1,8 @@
 <footer class="footer">
     <div class="container">
     <div class="footer__container">
-        <h2 class="footer__text">homemade ice cream made </h2>
-        <h3 class="footer__passion">with passion</h3>
+        <p class="footer__text">homemade ice cream made </p>
+        <p class="footer__passion">with passion</p>
     </div>
     <div class="footer__join">
         <ul class="footer__join-list">
@@ -10,21 +10,21 @@
                 <svg class="footer__join--icon" width="32" height="32">
                     <use href="https://github.com/"></use>
                 </svg>
-                d</a></li>
+                </a></li>
             <li class="footer__join--item"><a href="https://web.telegram.org/">
                 <svg class="footer__join--icon" width="32" height="32">
                     <use href="https://github.com/"></use>
                 </svg>
-                d</a></li>
+                </a></li>
             <li class="footer__join--item"><a href="https://m.facebook.com/">
                 <svg class="footer__join--icon" width="32" height="32">
                     <use href="https://github.com/"></use>
                 </svg>
-                d</a>
+                </a>
             </li>
         </ul>
+         <p class="footer__address--text">Feel free to contact <a class="footer__address--link" href="tel:610383766284">+61 &#40;0&#41; 383 766 284</a></p>
     </div>
-            <p class="footer__address--text">Feel free to contact <a class="footer__address--link" href="tel:610383766284">+61 &#40;0&#41; 383 766 284</a></p>
     <div class="footer__years">
         <p class="footer__years--text">	&#169; 2022 &#45; IceCream.
 All Rights Reserved. </p>
