--- a/src/sass/components/_09-footer.scss
+++ b/src/sass/components/_09-footer.scss
@@ -3,10 +3,6 @@
     background-color: var(--bgColorSecondary);
 }
 
-.footer__container{
-    margin-bottom: 40px;
-}
-
 .footer__text{
     font-family: var(--fontSecondary);
     font-weight: 400;
@@ -29,25 +25,37 @@ text-transform: uppercase;
 color: var(--colorSecondary);
 padding-left: 5px;
 padding-right: 85px;
+ margin-bottom: 40px;
 }
 
 
 .footer__join{
-    padding-left: 133px;
-    padding-right: 14px;
+    // padding-left: 133px;
+    // padding-right: 14px;
 }
 
 .footer__join--item{
     width: 32px;
     height: 32px;
+    list-style: none;
 }
 
 .footer__join-list{
     display: flex;
+    padding-left: 133px;
+    padding-right: 4px;
 }
 
 .footer__join--item:not(:last-child){
     margin-right: 28px;
+}
+
+.footer__join--icon{
+//   display: flex;
+//   align-items: center;
+//   justify-content: center;
+border-radius: 50%;
+background-color: var(--iconColor);
 }
 
 
@@ -73,7 +81,11 @@ text-decoration: none;
     margin-bottom: 3px;
     padding-right: 74px;
     padding-left: 74px;
+      color: #E1E1E1E1 ;
+  border-top: 1px solid;
+  width: 100%;
 }
+
 
 .footer__years--text{
     font-weight: 700;
@@ -81,4 +93,5 @@ font-size: 14px;
 line-height: 152%;
 text-align: center;
 color: var(--colorSubText);
+margin-top: 16px;
 }
