--- a/src/sass/components/_09-footer.scss
+++ b/src/sass/components/_09-footer.scss
@@ -3,6 +3,10 @@
     background-color: var(--bgColorSecondary);
 }
 
+.footer__container{
+    margin-bottom: 40px;
+}
+
 .footer__text{
     font-family: var(--fontSecondary);
     font-weight: 400;
@@ -25,7 +29,6 @@ text-transform: uppercase;
 color: var(--colorSecondary);
 padding-left: 5px;
 padding-right: 85px;
- margin-bottom: 40px;
 }
 
 
