--- a/src/sass/components/_04-about.scss
+++ b/src/sass/components/_04-about.scss
@@ -1,10 +1,42 @@
 .about {
   padding-top: 60px;
   padding-bottom: 40px;
+
+  background-color: var(--bgColorSecondary);
+  background-image: url(../images/04-about/about-bg-mob.png);
+
+  @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    background-image: url(../images/04-about/about-bg-mob@2x.png);
+  }
+
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: 0% 78%;
+
+  @media screen and (min-width: 480px) {
+    background-image: url(../images/04-about/about-bg-desk.png);
+
+    @media (min-device-pixel-ratio: 2),
+      (min-resolution: 192dpi),
+      (min-resolution: 2dppx) {
+      background-image: url(../images/04-about/about-bg-desk@2x.png);
+    }
+  }
 }
 .about__container {
   padding-inline: 20px;
   margin-inline: auto;
+
+  @media screen and (min-width: $tablet) {
+    padding-left: 32px;
+    padding-right: 34px;
+  }
+  @media screen and (min-width: $desktop) {
+    padding-left: 16px;
+    padding-right: 16px;
+  }
 }
 .about__label {
   font-family: var(--fontSecondary);
@@ -18,6 +50,18 @@
   color: var(--colorLabel);
 
   margin-bottom: 15px;
+
+  @media screen and (min-width: $tablet) {
+    font-size: 26px;
+    line-height: 1.15;
+
+    margin-bottom: 16px;
+  }
+  @media screen and (min-width: $desktop) {
+    font-size: 30px;
+    line-height: 1.13;
+    letter-spacing: 0.04em;
+  }
 }
 .about__title {
   font-family: var(--fontSecondary);
@@ -31,4 +75,123 @@
   color: var(--colorSecondary);
 
   margin-bottom: 32px;
+
+  @media screen and (min-width: $tablet) {
+    font-size: 48px;
+    line-height: 1.15;
+    letter-spacing: 0.04em;
+
+    margin-bottom: 40px;
+  }
+  @media screen and (min-width: $desktop) {
+    font-size: 58px;
+    line-height: 1.14;
+    letter-spacing: 0.06em;
+  }
+}
+.about__supwrapper {
+  @media screen and (min-width: $tablet) {
+    display: flex;
+  }
+}
+.about__cow {
+  margin-bottom: 40px;
+  @media screen and (min-width: $tablet) {
+    margin-bottom: 0px;
+    margin-right: 32px;
+  }
+  @media screen and (min-width: $desktop) {
+    margin-right: 99px;
+  }
+}
+.about__wrapper {
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 162%;
+
+  padding-right: 60px;
+
+  @media screen and (min-width: $tablet) {
+    font-size: 14px;
+    line-height: 176%;
+
+    padding-right: 0px;
+  }
+  @media screen and (min-width: $desktop) {
+    padding-top: 90px;
+    padding-right: 105px;
+  }
+}
+.about__text {
+  color: var(--colorText);
+
+  margin-bottom: 22px;
+
+  @media screen and (min-width: $tablet) {
+    margin-bottom: 15px;
+  }
+
+  @media screen and (min-width: $desktop) {
+    font-size: 16px;
+    line-height: 176%;
+    letter-spacing: 0.04em;
+
+    margin-bottom: 32px;
+  }
+}
+.about__subtext {
+  color: var(--colorSubText);
+
+  @media screen and (min-width: $desktop) {
+    font-size: 14px;
+    line-height: 194%;
+    letter-spacing: 0.04em;
+  }
+}
+.about__subtext--second {
+  margin-top: 10px;
+
+  @media screen and (min-width: $desktop) {
+    margin-top: 27px;
+  }
+}
+.about__button {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.29;
+  display: flex;
+  align-items: center;
+  text-align: center;
+
+  color: var(--colorSecondary);
+  margin-top: 20px;
+
+  padding-inline: 37px;
+  padding-top: 13px;
+  padding-bottom: 13px;
+
+  border: none;
+  border-radius: 22px;
+  background-color: var(--btnBgColor);
+
+  @media screen and (min-width: $tablet) {
+    font-size: 16px;
+    line-height: 1.31;
+  }
+  @media screen and (min-width: $desktop) {
+    margin-top: 40px;
+  }
+  &:hover,
+  &:focus {
+    background-color: var(--btnBgColorHover);
+  }
+}
+.about__icon {
+  fill: transparent;
+
+  margin-left: 15px;
+
+  @media screen and (min-width: $tablet) {
+    margin-left: 14px;
+  }
 }
