--- a/src/sass/components/_04-about.scss
+++ b/src/sass/components/_04-about.scss
@@ -174,6 +174,10 @@
   border-radius: 22px;
   background-color: var(--btnBgColor);
 
+  transition-property: background-color;
+  transition-duration: 250ms;
+  transition-timing-function: linear;
+
   @media screen and (min-width: $tablet) {
     font-size: 16px;
     line-height: 1.31;
