--- a/src/partials/05-advantages.html
+++ b/src/partials/05-advantages.html
@@ -1,16 +1,25 @@
 <section class="advantages">
-  <ul>
-    <li>
-      <p></p>
-      <p></p>
-    </li>
-    <li>
-      <p></p>
-      <p></p>
-    </li>
-    <li>
-      <p></p>
-      <p></p>
-    </li>
-  </ul>
+  <div class="advantages__container">
+    <h2 class="advantages__title">Advantages</h2>
+    <ul class="advantages__list">
+      <li class="advantages__item">
+        <p class="advantages__text">721</p>
+        <p class="advantages__subtext">
+          Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
+        </p>
+      </li>
+      <li class="advantages__item">
+        <p class="advantages__text">16kg</p>
+        <p class="advantages__subtext">
+          Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
+        </p>
+      </li>
+      <li class="advantages__item">
+        <p class="advantages__text">84</p>
+        <p class="advantages__subtext">
+          Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
+        </p>
+      </li>
+    </ul>
+  </div>
 </section>
