--- a/src/partials/06-gallery.html
+++ b/src/partials/06-gallery.html
@@ -1,4 +1,4 @@
-<section class="gallery-container container">
+<section class="gallery-container">
   <div class="gallery gallery-content">
     <a
       class="gallery-content__img"
@@ -14,14 +14,14 @@
         <source
           srcset="
             ./images/06-gallery/gallery-pic-1-tab-1x-min.png 1x,
-            ./images/06-gallery/gallery-pic-1-tab-1x-min.png 2x
+            ./images/06-gallery/gallery-pic-1-tab-2x-min.png 2x
           "
-          media="(min-width: 768px)"
+          media="(min-width: 768px) "
         />
         <source
           srcset="
             ./images/06-gallery/gallery-pic-1-mob-1x.png 1x,
-            ./images/06-gallery/gallery-pic-1-mob-1x.png 2x
+            ./images/06-gallery/gallery-pic-1-mob-2x.png 2x
           "
           media="(max-width: 767px)"
         />
@@ -45,14 +45,14 @@
         <source
           srcset="
             ./images/06-gallery/gallery-pic-2-tab-1x-min.png 1x,
-            ./images/06-gallery/gallery-pic-2-tab-1x-min.png 2x
+            ./images/06-gallery/gallery-pic-2-tab-2x-min.png 2x
           "
-          media="(min-width: 768px)"
+          media="(min-width: 768px) "
         />
         <source
           srcset="
             ./images/06-gallery/gallery-pic-2-mob-1x.png 1x,
-            ./images/06-gallery/gallery-pic-2-mob-1x.png 2x
+            ./images/06-gallery/gallery-pic-2-mob-2x.png 2x
           "
           media="(max-width: 767px)"
         />
@@ -76,14 +76,14 @@
         <source
           srcset="
             ./images/06-gallery/gallery-pic-3-tab-1x-min.png 1x,
-            ./images/06-gallery/gallery-pic-3-tab-1x-min.png 2x
+            ./images/06-gallery/gallery-pic-3-tab-2x-min.png 2x
           "
-          media="(min-width: 768px)"
+          media="(min-width: 768px) "
         />
         <source
           srcset="
             ./images/06-gallery/gallery-pic-3-mob-1x.png 1x,
-            ./images/06-gallery/gallery-pic-3-mob-1x.png 2x
+            ./images/06-gallery/gallery-pic-3-mob-2x.png 2x
           "
           media="(max-width: 767px)"
         />
@@ -106,14 +106,14 @@
         <source
           srcset="
             ./images/06-gallery/gallery-pic-4-tab-1x-min.png 1x,
-            ./images/06-gallery/gallery-pic-4-tab-1x-min.png 2x
+            ./images/06-gallery/gallery-pic-4-tab-2x-min.png 2x
           "
-          media="(min-width: 768px)"
+          media="(min-width: 768px) "
         />
         <source
           srcset="
             ./images/06-gallery/gallery-pic-4-mob-1x.png 1x,
-            ./images/06-gallery/gallery-pic-4-mob-1x.png 2x
+            ./images/06-gallery/gallery-pic-4-mob-2x.png 2x
           "
           media="(max-width: 767px)"
         />
@@ -137,14 +137,14 @@
         <source
           srcset="
             ./images/06-gallery/gallery-pic-5-tab-1x-min.png 1x,
-            ./images/06-gallery/gallery-pic-5-tab-1x-min.png 2x
+            ./images/06-gallery/gallery-pic-5-tab-2x-min.png 2x
           "
-          media="(min-width: 768px)"
+          media="(min-width: 768px) "
         />
         <source
           srcset="
             ./images/06-gallery/gallery-pic-5-mob-1x.png 1x,
-            ./images/06-gallery/gallery-pic-5-mob-1x.png 2x
+            ./images/06-gallery/gallery-pic-5-mob-2x.png 2x
           "
           media="(max-width: 767px)"
         />
@@ -168,14 +168,14 @@
         <source
           srcset="
             ./images/06-gallery/gallery-pic-6-tab-1x-min.png 1x,
-            ./images/06-gallery/gallery-pic-6-tab-1x-min.png 2x
+            ./images/06-gallery/gallery-pic-6-tab-2x-min.png 2x
           "
-          media="(min-width: 768px)"
+          media="(min-width: 768px) "
         />
         <source
           srcset="
             ./images/06-gallery/gallery-pic-6-mob-1x.png 1x,
-            ./images/06-gallery/gallery-pic-6-mob-1x.png 2x
+            ./images/06-gallery/gallery-pic-6-mob-2x.png 2x
           "
           media="(max-width: 767px)"
         />
@@ -199,14 +199,14 @@
         <source
           srcset="
             ./images/06-gallery/gallery-pic-7-tab-1x-min.png 1x,
-            ./images/06-gallery/gallery-pic-7-tab-1x-min.png 2x
+            ./images/06-gallery/gallery-pic-7-tab-2x-min.png 2x
           "
-          media="(min-width: 768px)"
+          media="(min-width: 768px) "
         />
         <source
           srcset="
             ./images/06-gallery/gallery-pic-7-mob-1x.png 1x,
-            ./images/06-gallery/gallery-pic-7-mob-1x.png 2x
+            ./images/06-gallery/gallery-pic-7-mob-2x.png 2x
           "
           media="(max-width: 767px)"
         />
@@ -230,14 +230,14 @@
         <source
           srcset="
             ./images/06-gallery/gallery-pic-8-tab-1x-min.png 1x,
-            ./images/06-gallery/gallery-pic-8-tab-1x-min.png 2x
+            ./images/06-gallery/gallery-pic-8-tab-2x-min.png 2x
           "
-          media="(min-width: 768px)"
+          media="(min-width: 768px) "
         />
         <source
           srcset="
             ./images/06-gallery/gallery-pic-8-mob-1x.png 1x,
-            ./images/06-gallery/gallery-pic-8-mob-1x.png 2x
+            ./images/06-gallery/gallery-pic-8-mob-2x.png 2x
           "
           media="(max-width: 767px)"
         />
@@ -261,14 +261,14 @@
         <source
           srcset="
             ./images/06-gallery/gallery-pic-9-tab-1x-min.png 1x,
-            ./images/06-gallery/gallery-pic-9-tab-1x-min.png 2x
+            ./images/06-gallery/gallery-pic-9-tab-2x-min.png 2x
           "
-          media="(min-width: 768px)"
+          media="(min-width: 768px) "
         />
         <source
           srcset="
             ./images/06-gallery/gallery-pic-9-mob-1x.png 1x,
-            ./images/06-gallery/gallery-pic-9-mob-1x.png 2x
+            ./images/06-gallery/gallery-pic-9-mob-2x.png 2x
           "
           media="(max-width: 767px)"
         />
@@ -292,15 +292,14 @@
         <source
           srcset="
             ./images/06-gallery/gallery-pic-10-tab-1x-min.png 1x,
-            ./images/06-gallery/gallery-pic-10-tab-1x-min.png 2x
+            ./images/06-gallery/gallery-pic-10-tab-2x-min.png 2x
           "
           media="(min-width: 768px)"
-          media="(min-width: 1199x)"
         />
         <source
           srcset="
             ./images/06-gallery/gallery-pic-10-mob-1x.png 1x,
-            ./images/06-gallery/gallery-pic-10-mob-1x.png 2x
+            ./images/06-gallery/gallery-pic-10-mob-2x.png 2x
           "
           media="(max-width: 767px)"
         />
