--- a/src/partials/01-header.html
+++ b/src/partials/01-header.html
@@ -1,5 +1,5 @@
 <header class="header">
-    <div class="header__container">
+    <div class="header__container container">
         <a href="/">
             <svg class="header__logo-icon" width = "200" height = "50">
                 <use href="./images/01-header/icons.svg#logo-milk"></use>
@@ -23,31 +23,19 @@
                 </li>
             </ul>
             <div class="btn-wrap">
-                <button class="header__menu-open">
+                <button class="header__menu-open btn">
                     <svg width = "20" height = "12">
                         <use href = "./images/01-header/icons.svg#burger"></use>
                     </svg>
                 </button>
-                <button class="header__menu-btn"> Buy now
-                    <svg class="header__btn-icon" width ="6" height = "4">
+                <button class="header__menu-btn button btn" btn> Buy now
+                    <svg class="header__btn-icon" width ="6" height = "10">
                         <use href ="./images/01-header/icons.svg#btn-icon"></use>
                     </svg>
-                </button>
-            
+                </button> 
             </div>
-            
         </nav>
-
-
-
     </div>
-
-
-
-
-
-
-
-
-
 </header>
+
+
