--- a/src/partials/03-products.html
+++ b/src/partials/03-products.html
@@ -7,11 +7,16 @@
     <ul class="products__list">
       <li class="products__item">
         <h3 class="products__subtitle">ice cream</h3>
-        <p class="products__subtext">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et
+        <p
+          class="products__subtext"
+          data-config='{ "btnClass": "products__button", "type": "text", "limit": 110, "more": " "}'
+        >
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur
+          eaque maiores dicta animi reiciendis esse iure magnam pariatur non
+          incidunt, repellendus quae dolorum autem voluptate quisquam iste, vel
+          deleniti ipsam!
         </p>
-        <button class="products__button" type="button">
+        <!-- <button class="products__button" type="button">
           <img
             srcset="
               ./images/03-products/arrow-right.png    1x,
@@ -21,15 +26,20 @@
             alt="Подробнее"
             loading="lazy"
           />
-        </button>
+        </button> -->
       </li>
       <li class="products__item">
         <h3 class="products__subtitle">ice coffee</h3>
-        <p class="products__subtext">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et
+        <p
+          class="products__subtext"
+          data-config='{ "btnClass": "products__button", "type": "text", "limit": 110, "more": " "}'
+        >
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur
+          eaque maiores dicta animi reiciendis esse iure magnam pariatur non
+          incidunt, repellendus quae dolorum autem voluptate quisquam iste, vel
+          deleniti ipsam!
         </p>
-        <button class="products__button" type="button">
+        <!-- <button class="products__button" type="button">
           <img
             srcset="
               ./images/03-products/arrow-right.png    1x,
@@ -39,15 +49,20 @@
             alt="Подробнее"
             loading="lazy"
           />
-        </button>
+        </button> -->
       </li>
       <li class="products__item">
         <h3 class="products__subtitle">milkshakes</h3>
-        <p class="products__subtext">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et
+        <p
+          class="products__subtext"
+          data-config='{ "btnClass": "products__button", "type": "text", "limit": 110, "more": " "}'
+        >
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur
+          eaque maiores dicta animi reiciendis esse iure magnam pariatur non
+          incidunt, repellendus quae dolorum autem voluptate quisquam iste, vel
+          deleniti ipsam!
         </p>
-        <button class="products__button" type="button">
+        <!-- <button class="products__button" type="button">
           <img
             srcset="
               ./images/03-products/arrow-right.png    1x,
@@ -57,7 +72,7 @@
             alt="Подробнее"
             loading="lazy"
           />
-        </button>
+        </button> -->
       </li>
     </ul>
   </div>
