--- a/src/sass/components/_06-gallery.scss
+++ b/src/sass/components/_06-gallery.scss
@@ -1,9 +1,17 @@
 .gallery-container{
     padding: 60px 0;
-    display: flex;
-    justify-content: center;
     background: linear-gradient(#fff5f6 45%,
                 var(--colorPrimary) 45% 65%);
+
+    @include mq(tab){
+        padding-top: 64px;
+        display: flex;
+        justify-content: center;
+    }
+
+    @include mq(desc){
+        padding: 120px 0;
+    }
 }
 
 .gallery-content{
@@ -58,5 +66,9 @@
     }
     &:nth-child(10){
         grid-area: i10;
+    }
+
+    & img{
+        width: 100%;
     }
 }
