--- a/src/partials/06-gallery.html
+++ b/src/partials/06-gallery.html
@@ -1,5 +1,5 @@
 <section class="gallery-container">
-  <div class="gallery gallery-content">
+  <div class="gallery gallery-content container">
     <a
       class="gallery-content__img"
       href="./images/06-gallery/gallery-pic-1-desc-2x-min.png"
