--- a/src/sass/components/_06-gallery.scss
+++ b/src/sass/components/_06-gallery.scss
@@ -15,6 +15,7 @@
 }
 
 .gallery-content{
+    padding: 0 5px;
     display: grid;
     grid-template-columns: repeat(7, 1fr);
     grid-template-rows: auto;
