--- a/src/partials/01-header.html
+++ b/src/partials/01-header.html
@@ -1,5 +1,5 @@
-<header class="header">
-    <div class="header__container container">
+<!-- <header class="header">
+    <div class="header__container container">     
         <a href="/">
             <svg class="header__logo-icon" width = "200" height = "50">
                 <use href="./images/01-header/icons.svg#logo-milk"></use>
@@ -35,7 +35,43 @@
                 </button> 
             </div>
         </nav>
-    </div>
+    </div> -->
+          <!-- MOBILE MENU -->
+    <div class="backdrop is-hidden">
+        <div class="mob-menu">
+            <button class="mob-menu__button button btn" btn> Buy now
+                <svg class="header__btn-icon" width ="6" height = "10">
+                    <use href ="./images/01-header/icons.svg#btn-icon"></use>
+                </svg>
+
+            </button>
+            <ul class="mob-menu__list">
+                <li class="mob-menu__item">
+                    <a href="" class="mob-menu__link mob-menu__link--current">Home</a>
+                </li>
+                <li class="mob-menu__item">
+                    <a href="" class="mob-menu__link">About us</a>
+                </li>
+                <li class="mob-menu__item">
+                    <a href="" class="mob-menu__link">How it’s made?</a>
+                </li>
+                <li class="mob-menu__item">
+                    <a href="" class="mob-menu__link">Our products</a>
+                </li>
+                <li class="mob-menu__item">
+                    <a href="" class="mob-menu__link">Contact</a>
+                </li>
+            </ul>
+            
+        </div>
+    </div>      
+
 </header>
+
+
+    
+
+                
+
 
 
