--- a/src/partials/02-hero.html
+++ b/src/partials/02-hero.html
@@ -1,4 +1,4 @@
-
+<!-- 
 <section class="hero">
     <div class="hero__container container">
 
@@ -95,4 +95,4 @@
             </div>
         </div>      
     </div>
-</section>
+</section> -->
