--- a/src/sass/components/_01-header.scss
+++ b/src/sass/components/_01-header.scss
@@ -5,16 +5,6 @@
     border: none;
     background-color: transparent;
     font-family: inherit;
-    cursor: pointer;
-}
-
-ul {
-    text-decoration: none;
-    list-style: none;
-}
-
-a {
-    text-decoration: none;
 }
 
 .header {
@@ -78,20 +68,19 @@ a {
     line-height: 1.31;
     text-align: center;
   
-
+    border: none;
     border-radius: 22px;
 
     background-color: var(--colorPrimary);
     color: var(--colorSecondary);
-    transition: all 250ms cubic-bezier(0.77, 0, 0.175, 1);
+    
 
     @include mq(tab) {       
         display: flex;
     }
     &:hover,
     &:focus {
-        background-color:#ECEBEB;
-        transform: scale(1.01);
+        background-color:var( --btnBgColorHover);
     }
 }
 
@@ -132,7 +121,6 @@ margin-right: 35px;
     transition: all 250ms cubic-bezier(0.77, 0, 0.175, 1);
     &:hover,&focus{
     color: var(--colorSecondary);
-    transform: scale(1.01);
     }
 }
 
@@ -141,6 +129,52 @@ margin-right: 35px;
 }
 
 
+
+            // mob-menu //
+
+.backdrop {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(66, 4, 4, 0.3);
+    z-index: 5;
+}            
+
+.mob-menu {
+    position: fixed;
+    top: 0;
+    right: 0;
+    z-index: 9;
+    display: flex;
+    flex-direction: column;
+    width: 250px;
+    height: 100vh;
+    padding: 60px 0;
+    background-color: #E17992;
+    
+}
+
+
+
+.mob-menu__link {
+    font-family: var(--fontPrimary);
+
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.31;
+    padding: 10px 0;
+
+
+    align-items: center;
+
+    color: #ffffff;
+    transition: all 250ms cubic-bezier(0.77, 0, 0.175, 1);
+    &:hover,&focus{
+    color: var(--colorSecondary);
+    }
+}
 
 
 
