--- a/src/sass/components/_02-hero.scss
+++ b/src/sass/components/_02-hero.scss
@@ -99,12 +99,11 @@
 .hero__list {
     position: relative;
     display: flex;
-    align-items: center;
+    align-items: baseline;
 }
 
 .hero__item {
     display: flex;
-   
 }
 
 .hero__item:not(:last-child) {
@@ -118,6 +117,7 @@
     line-height: 1.25;
     text-align: center;
     padding: 7px 22px;
+    min-height: 24px;
 
 
     border-radius: 20px;
@@ -139,9 +139,7 @@
 
     &:hover,
     &:focus {
-        background-color:#ECEBEB;
-        transform: scale(1.01);
-        
+        background-color:var( --btnBgColorHover);
     }    
 }
 
@@ -201,7 +199,7 @@ color:var(--colorSecondary);
     line-height: 1.25;
     text-align: center;
 
-    color: #FFFFFF;
+    color: var(--colorPrimary);
 
     @include mq(desc) {
         font-size: 14px;
@@ -216,7 +214,7 @@ color:var(--colorSecondary);
     width: 16px;
     height: 16px;
     border-radius: 50%;
-    background-color: #FFFFFF;
+    background-color: var(--bgColorPrimary);
     @include mq(desc) {
         width: 30px;
         height: 30px;
@@ -265,7 +263,7 @@ color:var(--colorSecondary);
     z-index:3;
     margin-bottom: 7px;
 
-    color: #FFFFFF;
+    color: var(--colorPrimary);
     @include mq (desc){
     font-size: 14px;
     line-height: 1.4;
@@ -279,14 +277,12 @@ color:var(--colorSecondary);
     width: 18px;
     height: 18px;
     fill: var(--colorSecondary);
-    background-color: #FFFFFF;
+    background-color: var(--bgColorPrimary);
     align-items: center;
 
     &:hover,
     &:focus {
-        fill: var(--colorLabel);
-        background-color: #ECEBEB;
-        transform: scale(1.01);
+        background-color: var(  --bgColorPrimary);
     }
 }
 
