--- a/src/partials/09-footer.html
+++ b/src/partials/09-footer.html
@@ -1,24 +1,24 @@
 <footer class="footer">
-    <div class="container">
+    <div class="container footer__box">
     <div class="footer__container">
         <p class="footer__text">homemade ice cream made </p>
         <p class="footer__passion">with passion</p>
     </div>
     <div class="footer__join">
         <ul class="footer__join-list">
-            <li class="footer__join--item"><a href="https://github.com/">
-                <svg class="footer__join--icon" width="32" height="32">
-                    <use href="https://github.com/"></use>
+            <li class="footer__join--link"><a class="footer__join--item" href="https://github.com/">
+                <svg class="footer__join--icon footer__githab">
+                    <use href="./images/01-header/icons.svg#github"></use>
                 </svg>
                 </a></li>
-            <li class="footer__join--item"><a href="https://web.telegram.org/">
-                <svg class="footer__join--icon" width="32" height="32">
-                    <use href="https://github.com/"></use>
+            <li class="footer__join--link"><a class="footer__join--item" href="https://web.telegram.org/">
+                <svg class="footer__join--icon footer__telegram">
+                    <use href="./images/01-header/icons.svg#telegram"></use>
                 </svg>
                 </a></li>
-            <li class="footer__join--item"><a href="https://m.facebook.com/">
-                <svg class="footer__join--icon" width="32" height="32">
-                    <use href="https://github.com/"></use>
+            <li class="footer__join--link"><a class="footer__join--item" href="https://m.facebook.com/">
+                <svg class="footer__join--icon footer__facebook">
+                    <use href="./images/01-header/icons.svg#facebook"></use>
                 </svg>
                 </a>
             </li>
