--- a/src/sass/utils/_mixin.scss
+++ b/src/sass/utils/_mixin.scss
@@ -48,5 +48,5 @@
 
 @mixin transition {
   transition-duration: 250ms;
-  transition-timing-function: linear;
+  transition-timing-function: ease-in-out;
 }
