--- a/src/partials/01-header.html
+++ b/src/partials/01-header.html
@@ -1,4 +1,4 @@
-<!-- <header class="header">
+<header class="header">
     <div class="header__container container">     
         <a href="/">
             <svg class="header__logo-icon" width = "200" height = "50">
@@ -23,48 +23,62 @@
                 </li>
             </ul>
             <div class="btn-wrap">
-                <button class="header__menu-open btn">
+                <button class="header__menu-open btn" type="button" data-menu-open>
                     <svg width = "20" height = "12">
                         <use href = "./images/01-header/icons.svg#burger"></use>
                     </svg>
                 </button>
-                <button class="header__menu-btn button btn" btn> Buy now
+                <button class="header__menu-btn button btn"> Buy now
                     <svg class="header__btn-icon" width ="6" height = "10">
                         <use href ="./images/01-header/icons.svg#btn-icon"></use>
                     </svg>
                 </button> 
             </div>
         </nav>
-    </div> -->
+    </div>
+</header>
+
           <!-- MOBILE MENU -->
-    <div class="backdrop is-hidden">
-        <div class="mob-menu">
-            <button class="mob-menu__button button btn" btn> Buy now
+    <div class="backdrop is-hidden" data-menu>
+        <div class="mob-menu mob-container">
+            
+            <button class="mob-menu__close btn" data-menu-close>
+                <svg class="close__icon" width = "14" height = "14">
+                    <use href ="./images/01-header/icons.svg#github"></use>
+                </svg>
+            </button>
+            <button class="mob-menu__button button btn"> Buy now
                 <svg class="header__btn-icon" width ="6" height = "10">
                     <use href ="./images/01-header/icons.svg#btn-icon"></use>
                 </svg>
-
             </button>
+
             <ul class="mob-menu__list">
+                
                 <li class="mob-menu__item">
                     <a href="" class="mob-menu__link mob-menu__link--current">Home</a>
                 </li>
+
                 <li class="mob-menu__item">
                     <a href="" class="mob-menu__link">About us</a>
                 </li>
+
                 <li class="mob-menu__item">
                     <a href="" class="mob-menu__link">How it’s made?</a>
                 </li>
+
                 <li class="mob-menu__item">
                     <a href="" class="mob-menu__link">Our products</a>
                 </li>
+                
                 <li class="mob-menu__item">
                     <a href="" class="mob-menu__link">Contact</a>
                 </li>
+
             </ul>
             
         </div>
-    </div>      
+    </div>     
 
 </header>
 
