--- a/src/sass/components/_01-header.scss
+++ b/src/sass/components/_01-header.scss
@@ -34,8 +34,12 @@
 }
 
 .header__menu-btn {
+    display: none;
     min-width: 159px;
     min-height: 44px;
+    @include mq(tab) {
+        display: flex;
+    }
     &-open {
         @include mq(tab) {
         margin-right: 30px;
@@ -59,7 +63,6 @@
 
 
 .button {
-    display: none;
     align-items: center;
     justify-content: center;
 
@@ -74,10 +77,6 @@
     background-color: var(--colorPrimary);
     color: var(--colorSecondary);
     
-
-    @include mq(tab) {       
-        display: flex;
-    }
     &:hover,
     &:focus {
         background-color:var( --btnBgColorHover);
@@ -124,7 +123,8 @@ margin-right: 35px;
     }
 }
 
-.header__link--current {
+.header__link--current,
+.mob-menu__link--current{
     color: var(--colorSecondary);
 }
 
@@ -138,36 +138,100 @@ margin-right: 35px;
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(66, 4, 4, 0.3);
-    z-index: 5;
-}            
+    background-color: rgba(66, 4, 4, 0.4);
+    z-index: 12;
+}     
 
 .mob-menu {
     position: fixed;
     top: 0;
     right: 0;
-    z-index: 9;
+    z-index: 5;
     display: flex;
     flex-direction: column;
+
     width: 250px;
     height: 100vh;
     padding: 60px 0;
     background-color: #E17992;
-    
+
+    transition-property: transform;
+    @include transition;
+    // transition: tran sform 250ms ease-in-out;
+
+
+    @include mq (tab) {
+        padding-top: 58px;
+        width: 254px;
+    }
 }
 
+.backdrop.is-hidden .mob-menu {
+    transform: translateX(100%);
+  }
+  
+
+
+
+
+// .is-open {
+//     display: block;
+//     position: absolute;
+//     top: 0%;
+//     left: 0;
+//     width: 100%;
+//     height: 100vh;
+//     margin-left: 0px;
+//     overflow-y: scroll;
+// }
+
+
+
+.is-hidden {
+    visibility: hidden;
+    opacity: 0;
+    pointer-events: none;
+    }  
+
+
+
+.mob-menu__button {
+    width: 209px;
+    height: 44px;
+    margin: 0 auto;
+    filter:drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+    @include mq (tab) {
+        width: 186px;
+    }
+}
+
+
+.mob-menu__list {
+    margin-top: 32px;
+}
+
+.mob-menu__item {
+    display: flex;
+    height: 42px;
+    padding-left: 20px;
+    border-top: 1px solid #E18298;
+    border-bottom: 1px solid #E18298;
+    align-items: center;
+    }
+
+// .mob-menu__item:not(:last-child) {
+//     margin-bottom: 22px;
+// }
 
 
 .mob-menu__link {
     font-family: var(--fontPrimary);
 
     font-weight: 700;
-    font-size: 16px;
-    line-height: 1.31;
-    padding: 10px 0;
-
-
-    align-items: center;
+    font-size: 14px;
+    line-height: 1.28;
+    padding-top: 15px;
+    padding-bottom: 15px;
 
     color: #ffffff;
     transition: all 250ms cubic-bezier(0.77, 0, 0.175, 1);
@@ -176,6 +240,14 @@ margin-right: 35px;
     }
 }
 
+.mob-menu__link--current {
+    color: var(--colorSecondary);
+}
 
 
+.mob-menu__close {
+    position: absolute;
+    top:20px    ;
+    right: 32px;
+}
 
