contacts final except modal

--- a/src/partials/08-contacts.html
+++ b/src/partials/08-contacts.html
@@ -3,7 +3,7 @@
         <ul class="location__list">
             <li class="location__item">
                 <h3 class="location__title">
-                    <span class="location__title-name">CAFE</span>
+                    CAFE
                 </h3>
                 <p class="location__city">Chicago</p>
                 <p class="location__text">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
@@ -29,7 +29,7 @@
             </li>
             <li class="location__item">
                 <h3 class="location__title location__LosAgneles">
-                    <span class="location__title-name">FOODTRUCK</span>
+                    FOODTRUCK
                 </h3>
                 <p class="location__city">Los Angeles</p>
                 <p class="location__text">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
@@ -53,7 +53,7 @@
             </li>
             <li class="location__item">
                 <h3 class="location__title">
-                    <span class="location__title-name">CAFE</span>
+                    CAFE
                 </h3>
                 <p class="location__city">New York</p>
                 <p class="location__text">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
@@ -78,20 +78,19 @@
                 </ul>
             </li>
         </ul>
-        <ul>
-            <li>
-                <button class="location__button">
-                    <span>Our Locations</span>
-                    <svg>
-                        <use href="./images/01-header/icons.svg" width="6" height="10"></use>
+        <ul class="location__button">
+            <li class="location__button-item">
+                <button class="location__button-loc">
+                    <span class="location__button-text">Our Locations</span>
+                    <svg class="location__button-icon-loc" width="6" height="10">
+                        <use href="./images/01-header/icons.svg#arrow"></use>
                     </svg>
                 </button>
             </li>
-            <li>
-                <button class="location__button">
-                    <span>Franchise</span>
-                    <svg>
-                        <use href="./images/01-header/icons.svg" width="6" height="10"></use>
+            <li class="location__button-item">
+                <button class="location__button-fran">
+                    <span class="location__button-text">Franchise</span>
+                    <use href="./images/01-header/icons.svg#arrow"></use>
                     </svg>
                 </button>
             </li>
