--- a/src/partials/09-footer.html
+++ b/src/partials/09-footer.html
@@ -6,17 +6,17 @@
     </div>
     <div class="footer__join">
         <ul class="footer__join-list">
-            <li class="footer__join--link"><a class="footer__join--item" href="https://github.com/">
+            <li class="footer__join--link"><a target="_blank" class="footer__join--item" href="https://github.com/">
                 <svg class="footer__join--icon footer__githab">
                     <use href="./images/01-header/icons.svg#github"></use>
                 </svg>
                 </a></li>
-            <li class="footer__join--link"><a class="footer__join--item" href="https://web.telegram.org/">
+            <li class="footer__join--link"><a target="_blank" class="footer__join--item" href="https://web.telegram.org/">
                 <svg class="footer__join--icon footer__telegram">
                     <use href="./images/01-header/icons.svg#telegram"></use>
                 </svg>
                 </a></li>
-            <li class="footer__join--link"><a class="footer__join--item" href="https://m.facebook.com/">
+            <li class="footer__join--link"><a target="_blank" class="footer__join--item" href="https://m.facebook.com/">
                 <svg class="footer__join--icon footer__facebook">
                     <use href="./images/01-header/icons.svg#facebook"></use>
                 </svg>
