--- a/src/sass/components/_09-footer.scss
+++ b/src/sass/components/_09-footer.scss
@@ -9,12 +9,18 @@ display: flex;
 }
 }
 
-// .footer__container{
-//     margin-bottom: 40px;
-//     @media screen and (min-width: 1200px){
-// margin-bottom: 60px;
-// }
-// }
+.footer__container{
+    padding-top: 42px;
+    padding-bottom: 0px;
+@media screen and (min-width: 768px){
+    padding-top: 0px;
+    padding-bottom: 40px;
+}
+@media screen and (min-width: 1200px){
+padding-top: 120px;
+padding-bottom: 60px;
+}
+}
 
 .footer__text{
     font-family: var(--fontSecondary);
@@ -38,7 +44,7 @@ padding-right: 0px;
 font-size: 30px;
 line-height: 1.13;
 margin-bottom: 16px;
-padding-top: 121px;
+letter-spacing: 0.04em;
 }
 }
 
@@ -61,14 +67,14 @@ padding-right: 0px;
 }
 @media screen and (min-width: 1200px){
 font-size: 58px;
-padding-bottom: 60px;
+letter-spacing: 0.06em;
 }
 }
 
 .footer__join{
         @media screen and (min-width: 320px){
 padding-bottom: 40px;
-padding-top: 40px;
+padding-top: 38px;
 }
     @media screen and (min-width: 768px){
 padding-bottom: 59px;
@@ -139,14 +145,16 @@ height: 20px;
 
 .footer__join-list{
     display: flex;
-    padding-left: 133px;
+    justify-content: flex-end;
+    // text-align: right;
+    // padding-left: 133px;
     padding-right: 4px;
     @media screen and (min-width: 768px){
-    padding-left: 234px;
+    // padding-left: 234px;
     padding-right: 5px;
 }
     @media screen and (min-width: 1200px){
-    padding-left: 534px;
+    // padding-left: 534px;
     padding-right: 1px;
 }
 }
@@ -160,19 +168,16 @@ margin-right: 30px;
 
 .footer__address--text{
         margin-top: 40px;
-    padding-left: 55px;
     padding-right: 5px;
     font-weight: 700;
 font-size: 12px;
 line-height: 186%;
+text-align: right;
 color: var(--colorText);
     @media screen and (min-width: 768px){
-padding-left:128px;
 font-size: 14px;
-text-align: right;
 }
     @media screen and (min-width: 1200px){
-padding-left:375px;
 font-size: 16px;
 letter-spacing: 0.02em;
 padding-right: 1px;
@@ -196,7 +201,7 @@ text-decoration: none;
 padding-top: 8px;
 padding-bottom: 8px;
 }
-      @media screen and (min-width: 768px){
+      @media screen and (min-width: 1200px){
 padding-top: 7px;
 padding-bottom: 4px;
 }
