--- a/src/partials/01-header.html
+++ b/src/partials/01-header.html
@@ -4,37 +4,42 @@
             <svg class="header__logo-icon" width = "200" height = "50">
                 <use href="./images/01-header/icons.svg#logo-milk"></use>
             </svg>
+
         <nav class="header__nav">
             <ul class="header__list">
                 <li class="header__item">
                     <a href="" class="header__link header__link--current">Home</a>
                 </li>
+
                 <li class="header__item">
                     <a href="" class="header__link">About us</a>
                 </li>
+
                 <li class="header__item">
                     <a href="" class="header__link">How it’s made?</a>
                 </li>
+
                 <li class="header__item">
                     <a href="" class="header__link">Our products</a>
                 </li>
+
                 <li class="header__item">
                     <a href="" class="header__link">Contact</a>
-                </li>
+                </li>        
             </ul>
-            <div class="btn-wrap">
-                <button class="header__menu-open btn" type="button" data-menu-open>
-                    <svg width = "20" height = "12">
-                        <use href = "./images/01-header/icons.svg#burger"></use>
-                    </svg>
-                </button>
-                <button class="header__menu-btn button btn"> Buy now
-                    <svg class="header__btn-icon" width ="6" height = "10">
-                        <use href ="./images/01-header/icons.svg#btn-icon"></use>
-                    </svg>
-                </button> 
-            </div>
         </nav>
+        <div class="btn-wrap">
+            <button class="header__menu-open btn" type="button" data-menu-open>
+                <svg width = "20" height = "12">
+                    <use href = "./images/01-header/icons.svg#burger"></use>
+                </svg>
+            </button>
+            <button class="header__menu-btn button btn"> Buy now
+                <svg class="header__btn-icon" width ="6" height = "10">
+                    <use href ="./images/01-header/icons.svg#btn-icon"></use>
+                </svg>
+            </button> 
+        </div>
     </div>
 </header>
 
@@ -44,9 +49,10 @@
             
             <button class="mob-menu__close btn" data-menu-close>
                 <svg class="close__icon" width = "14" height = "14">
-                    <use href ="./images/01-header/icons.svg#github"></use>
+                    <use href ="./images/01-header/icons.svg#close-icon"></use>
                 </svg>
             </button>
+            
             <button class="mob-menu__button button btn"> Buy now
                 <svg class="header__btn-icon" width ="6" height = "10">
                     <use href ="./images/01-header/icons.svg#btn-icon"></use>
