--- a/src/sass/components/_01-header.scss
+++ b/src/sass/components/_01-header.scss
@@ -50,7 +50,9 @@
 }
 
 .header__menu-open {
-    margin-right: 32px;
+    @include mq(tab) {
+        margin-right: 32px;
+    }
     @include mq(desc) {
         display: none;
     }
@@ -93,7 +95,6 @@
 
 .header__list {
     display: none;
-    margin-right: 128px;
 
     @include mq(desc) {
         display: flex;
@@ -140,6 +141,9 @@ margin-right: 35px;
     height: 100%;
     background-color: rgba(66, 4, 4, 0.4);
     z-index: 12;
+    @include mq (desc) {
+        display: none;
+    }   
 }     
 
 .mob-menu {
@@ -164,28 +168,18 @@ margin-right: 35px;
         padding-top: 58px;
         width: 254px;
     }
+    @include mq (desc) {
+        display: none;
+    }
 }
 
+
+
+
 .backdrop.is-hidden .mob-menu {
-    transform: translateX(100%);
+    transform: translateX(100%); 
   }
   
-
-
-
-
-// .is-open {
-//     display: block;
-//     position: absolute;
-//     top: 0%;
-//     left: 0;
-//     width: 100%;
-//     height: 100vh;
-//     margin-left: 0px;
-//     overflow-y: scroll;
-// }
-
-
 
 .is-hidden {
     visibility: hidden;
@@ -198,8 +192,8 @@ margin-right: 35px;
 .mob-menu__button {
     width: 209px;
     height: 44px;
-    margin: 0 auto;
-    filter:drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+    margin-right: 32px;
+    margin-left: 32px;
     @include mq (tab) {
         width: 186px;
     }
@@ -218,11 +212,6 @@ margin-right: 35px;
     border-bottom: 1px solid #E18298;
     align-items: center;
     }
-
-// .mob-menu__item:not(:last-child) {
-//     margin-bottom: 22px;
-// }
-
 
 .mob-menu__link {
     font-family: var(--fontPrimary);
@@ -250,4 +239,3 @@ margin-right: 35px;
     top:20px    ;
     right: 32px;
 }
-
