--- a/src/sass/components/_09-footer.scss
+++ b/src/sass/components/_09-footer.scss
@@ -1,16 +1,7 @@
 
 .footer{
     background-color: var(--bgColorSecondary);
-}
-
-.footer__box{
-    @media screen and (min-width: 768px){
-display: flex;
-}
-}
-
-.footer__container{
-    padding-top: 42px;
+        padding-top: 40px;
     padding-bottom: 0px;
 @media screen and (min-width: 768px){
     padding-top: 0px;
@@ -21,6 +12,20 @@ padding-top: 120px;
 padding-bottom: 60px;
 }
 }
+
+.footer__box{
+    @media screen and (min-width: 768px){
+display: flex;
+}
+}
+
+// .footer__container{
+//     padding-bottom: 0px;
+// @media screen and (min-width: 768px){
+//     padding-top: 0px;
+//     padding-bottom: 40px;
+// }
+// }
 
 .footer__text{
     font-family: var(--fontSecondary);
@@ -73,7 +78,6 @@ letter-spacing: 0.06em;
 
 .footer__join{
         @media screen and (min-width: 320px){
-padding-bottom: 40px;
 padding-top: 38px;
 }
     @media screen and (min-width: 768px){
@@ -117,8 +121,8 @@ height: 34px;
 }
 
 .footer__githab{
-    width: 19px;
-    height: 19px;
+    width: 18.82px;
+    height: 18.82px;
     @media screen and (min-width: 768px){
  width: 20px;
 height: 20px;
@@ -126,20 +130,20 @@ height: 20px;
 }
 
 .footer__telegram{
-     width: 19px;
-    height: 15px;
+     width: 19.2px;
+    height: 14.93px;
     @media screen and (min-width: 768px){
- width: 20px;
-height: 16px;
+ width: 20.4px;
+height: 15.87px;
 }
 }
 
 .footer__facebook{
-     width: 9px;
-    height: 19px;
+     width: 8.8px;
+    height: 19.2px;
     @media screen and (min-width: 768px){
- width: 10px;
-height: 20px;
+ width: 9.35px;
+height: 20.4px;
 }
 }
 
@@ -202,6 +206,7 @@ padding-top: 8px;
 padding-bottom: 8px;
 }
       @media screen and (min-width: 1200px){
+        width: 1167px;
 padding-top: 7px;
 padding-bottom: 4px;
 }
