--- a/src/partials/08-contacts.html
+++ b/src/partials/08-contacts.html
@@ -93,7 +93,8 @@
             <li class="location__button-item">
                 <button class="location__button-fran">
                     <span class="location__button-text">Franchise</span>
-                    <use href="./images/01-header/icons.svg#arrow"></use>
+                    <svg class="location__button-icon-fran" width="6" height="10">
+                        <use href="./images/01-header/icons.svg#arrow-red"></use>
                     </svg>
                 </button>
             </li>
