--- a/src/partials/02-hero.html
+++ b/src/partials/02-hero.html
@@ -84,14 +84,15 @@
 
             <div class="hero__info-wrap">
                 
-                <p class="hero__infotext">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</p>
-
+                <p class="hero__infotext"
+                data-config='{ "btnClass": "btn__info", "type": "text", "limit": 10, "more": " "}'>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</p>
+<!-- 
                 <button class="btn-info btn">
                     <svg width = "20" height = "12">
                         <use href = "./images/01-header/icons.svg#arrow-right"></use>
                     </svg>
 
-                </button>
+                </button> -->
             </div>
         </div>      
     </div>
