--- a/src/sass/components/_01-header.scss
+++ b/src/sass/components/_01-header.scss
@@ -23,13 +23,12 @@
     padding-top: 6px;
     @include mq (tab) {
         padding-top: 32px;
-        padding-left: 32px;
-        padding-right: 32px;
+        padding-inline: 32px;
+
     }
     @include mq(desc) {
         padding-top: 37px;
-        padding-left: 15px;
-        padding-right: 15px;
+        padding-inline: 16px;
     }
 }
 
