contacts1 final without modal

--- a/src/partials/08-contacts.html
+++ b/src/partials/08-contacts.html
@@ -1,11 +1,9 @@
 <section class="location">
     <div class="container">
-        <h2 class="location__title">привет</h2>
+        <h2 class="location__title">Contacts</h2>
         <ul class="location__list">
             <li class="location__item">
-                <p class="location__point">
-                    <span class="location__title-name">CAFE</span>
-                </p>
+                <span class="location__point">CAFE</span>
                 <p class="location__city">
                     Chicago
                 </p>
@@ -31,9 +29,7 @@
                 </ul>
             </li>
             <li class="location__item">
-                <p class="location__point location__LosAgneles">
-                    <span class="location__title-name">FOODTRUCK</span>
-                </p>
+                <span class="location__point location__LosAgneles">FOODTRUCK</span>
                 <p class="location__city">Los Angeles</p>
                 <p class="location__text">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
                 <ul class="location__schedule">
@@ -55,9 +51,7 @@
                 </ul>
             </li>
             <li class="location__item">
-                <p class="location__point">
-                    <span class="location__title-name">CAFE</span>
-                </p>
+                <span class="location__point">CAFE</span>
                 <p class="location__city">New York</p>
                 <p class="location__text">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
                 <ul class="location__schedule">
