--- a/src/sass/components/_08-contacts.scss
+++ b/src/sass/components/_08-contacts.scss
@@ -25,19 +25,17 @@
 }
 
 .location__list {
-  list-style: none;
   margin-bottom: 32px;
+  list-style: none;
   @include mq(tab) {
     display: flex;
     flex-wrap: wrap;
     gap: 32px;
-    margin-top: 80px;
     margin-bottom: 60px;
   }
   @include mq(desc) {
     display: flex;
     flex-wrap: wrap;
-    margin-top: 120px;
   }
 }
 
@@ -205,7 +203,7 @@
   line-height: 1.5;
   color: var(--colorSubText);
   text-decoration: none;
-  @include transition;
+  transition: color 250ms cubic-bezier(0.77, 0, 0.175, 1);
   &:hover,
   &:focus {
     color: var(--colorSecondary);
@@ -266,7 +264,7 @@
   font-weight: 700;
   font-size: 16px;
   line-height: 1.31;
-  @include transition;
+  transition: background-color 250ms cubic-bezier(0.77, 0, 0.175, 1);
   &:hover,
   &:focus {
     background-color: var(--btnBgColorHover);
