--- a/src/partials/07-reviews.html
+++ b/src/partials/07-reviews.html
@@ -1,4 +1,4 @@
-<section class="container">
+<section class="container review-section">
   <div class="swiper">
     <div class="swiper-wrapper">
       <div class="review swiper-slide">
