--- a/src/sass/components/_07-customers.scss
+++ b/src/sass/components/_07-customers.scss
@@ -1,3 +1,15 @@
+.review-section{
+    padding-bottom: 60px;
+
+    @include mq(tab){
+        padding-bottom: 80px;
+    }
+
+    @include mq(desc){
+        padding-bottom: 120px;
+    }
+}
+
 .review {
     display: flex;
     flex-direction: column;
