--- a/src/sass/components/_01-header.scss
+++ b/src/sass/components/_01-header.scss
@@ -140,8 +140,13 @@ margin-right: 35px;
     height: 100%;
     background-color: rgba(66, 4, 4, 0.4);
     z-index: 12;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
     @include mq (desc) {
         display: none;
+        
+      
+
     }   
 }     
 
