--- a/src/partials/04-about.html
+++ b/src/partials/04-about.html
@@ -43,13 +43,48 @@
         <p class="about__subtext about__subtext--second">
           Aliquam erat volutpat. Aenean accumsan.
         </p>
-        <button type="button" class="about__button">
+        <button type="button" class="about__button" data-modal-about-open>
           Read more
           <svg class="about__icon" width="10px" height="10px">
             <use href="./images/01-header/icons.svg#arrow-red"></use>
           </svg>
         </button>
       </div>
+    </div>
+  </div>
+  <!-- Modal -->
+  <div class="backdrop-about is-hidden" data-modal-about>
+    <div class="modal">
+      <button class="modal__btn" data-modal-about-close>
+        <svg class="modal__icon" width="18" height="18">
+          <use href="./images/01-header/icons.svg#close-icon"></use>
+        </svg>
+      </button>
+      <p class="modal__title">How It's Made?</p>
+      <p class="modal__text">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt,
+        doloremque!
+      </p>
+      <p class="modal__subtext">
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Suscipit,
+        voluptatum. Autem vel esse eaque architecto, corrupti expedita fugit
+        cumque et maiores officia sunt tempora iure doloribus soluta mollitia
+        ea! Aut aliquam odit ipsam, unde voluptatibus, consequatur nisi incidunt
+        quia libero quam exercitationem repudiandae, impedit corrupti earum.
+        Commodi sit assumenda rem!
+      </p>
+      <p class="modal__text">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt,
+        doloremque!
+      </p>
+      <p class="modal__subtext modal__subtext--last">
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Suscipit,
+        voluptatum. Autem vel esse eaque architecto, corrupti expedita fugit
+        cumque et maiores officia sunt tempora iure doloribus soluta mollitia
+        ea! Aut aliquam odit ipsam, unde voluptatibus, consequatur nisi incidunt
+        quia libero quam exercitationem repudiandae, impedit corrupti earum.
+        Commodi sit assumenda rem!
+      </p>
     </div>
   </div>
 </section>
