--- a/src/sass/components/_04-about.scss
+++ b/src/sass/components/_04-about.scss
@@ -174,8 +174,7 @@
   background-color: var(--btnBgColor);
 
   transition-property: background-color;
-  transition-duration: 250ms;
-  transition-timing-function: linear;
+  @include transition;
 
   @media screen and (min-width: $tablet) {
     font-size: 16px;
@@ -195,5 +194,170 @@
 
   @media screen and (min-width: $tablet) {
     margin-left: 14px;
+  }
+}
+
+// Modal
+/* Modal */
+.backdrop-about {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.2);
+
+  transition-property: opacity, visibility;
+  @include transition;
+
+  overflow: scroll;
+  z-index: 10000;
+
+  @media screen and (max-height: 625px) {
+    overflow-y: scroll;
+  }
+
+  &.is-hidden {
+    visibility: hidden;
+    opacity: 0;
+    pointer-events: none;
+
+    & .modal {
+      visibility: hidden;
+      opacity: 0;
+      transform: translate(-50%, -50%) scale(0.9);
+    }
+  }
+}
+.modal-open {
+  overflow: hidden;
+}
+.modal {
+  position: absolute;
+  width: calc(100% - 30px);
+  max-width: 450px;
+  top: 0%;
+  left: 50%;
+  transform: translate(-50%, 0) scale(1);
+  padding: 40px;
+
+  background-color: var(--bgColorSecondary);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+
+  transition-property: opacity, visibility, transform;
+  @include transition;
+
+  @media screen and (min-width: 480px) {
+    top: 50%;
+    transform: translate(-50%, -50%) scale(1);
+  }
+  @media screen and (min-width: $desktop) {
+    max-width: 528px;
+  }
+  background-image: url(../images/04-about/about-bg-mob.png);
+
+  @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    background-image: url(../images/04-about/about-bg-mob@2x.png);
+  }
+
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: 0% 78%;
+
+  @media screen and (min-width: 480px) {
+    background-image: url(../images/04-about/about-bg-desk.png);
+
+    @media (min-device-pixel-ratio: 2),
+      (min-resolution: 192dpi),
+      (min-resolution: 2dppx) {
+      background-image: url(../images/04-about/about-bg-desk@2x.png);
+    }
+  }
+}
+.modal__btn {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  background: var(--bgColorPrimary);
+  border: 0px;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  position: absolute;
+  top: 8px;
+  right: 8px;
+
+  &:hover,
+  &:focus {
+    background-color: var(--btnBgColorHover);
+  }
+}
+
+.modal__icon {
+  fill: var(--colorSecondary);
+  transition-property: fill;
+  @include transition;
+}
+
+.modal__title {
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.5;
+  text-align: center;
+
+  color: var(--colorSecondary);
+
+  margin-bottom: 30px;
+
+  @media screen and (min-width: $desktop) {
+    line-height: 1.15;
+  }
+}
+.modal__title {
+  font-family: var(--fontSecondary);
+  font-weight: 400;
+  font-size: 34px;
+  line-height: 1.15;
+  text-align: center;
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
+  @media screen and (min-width: $desktop) {
+    font-size: 48px;
+    line-height: 1.14;
+    letter-spacing: 0.06em;
+  }
+}
+.modal__text {
+  color: var(--colorText);
+  text-transform: capitalize;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 162%;
+  margin-bottom: 10px;
+  @media screen and (min-width: $desktop) {
+    font-size: 16px;
+    line-height: 176%;
+    letter-spacing: 0.04em;
+  }
+}
+.modal__subtext {
+  color: var(--colorSubText);
+  font-size: 14px;
+  line-height: 162%;
+  letter-spacing: 0.04em;
+  margin-bottom: 20px;
+  &.modal__subtext--last {
+    margin-bottom: 0px;
+  }
+  @media screen and (min-width: $desktop) {
+    font-size: 14px;
+    line-height: 194%;
+    letter-spacing: 0.04em;
   }
 }
